Rainforest features ported